added frontend homepage